# par_prog_2

./: CMakeLists.txt  Matrix.cpp  parProg2.cpp  отчёт.docx
